# devspace-sweeper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: devspace-sweeper.rb
recipes/: default.yml
src/: clean.rs  cli.rs  main.rs  recipes.rs  report.rs  scan.rs
tests/: integration.rs
