[package]
name = "devspace-sweeper"
version = "0.1.0"
edition = "2021"
description = "Tiny cross-platform CLI that finds and safely cleans dev junk across projects"
authors = ["DevSpace Sweeper Contributors"]
license = "MIT"
repository = "https://github.com/adwaitdeshpande/devspace-sweeper"
homepage = "https://github.com/adwaitdeshpande/devspace-sweeper"
documentation = "https://github.com/adwaitdeshpande/devspace-sweeper#readme"
readme = "README.md"
keywords = ["cli", "cleanup", "cache", "developer", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.5"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock"] }
humansize = "2.1"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
